Fixed the spacing on the eatery page for all card elements

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -270,3 +270,12 @@ a.nav-link{
 .small-spacer-bottom {
   margin-bottom: 50px;
 }
+
+.eat-list-img {
+  object-fit: contain;
+  height: auto;
+  max-height: 150px;
+  min-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
